crates/fleet-server/tests/snapshots/health__health_live.snap
---
source: crates/fleet-server/tests/health.rs
expression: redacted(seen)
---
{
  "status": 200,
  "headers": {
    "cache-control": "no-store",
    "content-length": "0",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "referrer-policy": "no-referrer",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]"
  },
  "body": null
}
