crates/fleet-server/tests/snapshots/health__health_ready_busy.snap
---
source: crates/fleet-server/tests/health.rs
expression: redacted(seen)
---
{
  "status": 503,
  "headers": {
    "cache-control": "no-store",
    "content-length": "128",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "referrer-policy": "no-referrer",
    "retry-after": "1",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]"
  },
  "body": {
    "error": {
      "code": "busy",
      "message": "The server is busy. Try again shortly.",
      "request_id": "[request_id]"
    }
  }
}
