crates/fleet-server/tests/snapshots/health__health_ready_internal.snap
---
source: crates/fleet-server/tests/health.rs
expression: redacted(seen)
---
{
  "status": 500,
  "headers": {
    "cache-control": "no-store",
    "content-length": "169",
    "content-security-policy": "default-src 'none'; frame-ancestors 'none'",
    "content-type": "application/json",
    "referrer-policy": "no-referrer",
    "x-content-type-options": "nosniff",
    "x-frame-options": "DENY",
    "x-request-id": "[request_id]"
  },
  "body": {
    "error": {
      "code": "internal",
      "message": "Something went wrong on the server. Quote the request ID when reporting it.",
      "request_id": "[request_id]"
    }
  }
}
